--- a/kokoro/rbe/continuous.cfg
+++ b/kokoro/rbe/continuous.cfg
@@ -6,5 +6,5 @@
 # github_scm.name is specified in the job configuration (next section).
 build_file: "kokoro-codelab-amirha/kokoro/rbe/kokoro_build.sh" 
 container_properties {
-  docker_image: "us-docker.pkg.dev/artifact-foundry-prod/docker-3p-trusted/ubuntu:22.04"
+  docker_image: "ubuntu:22.04"
 }
